# mRNAfold

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
codon_tables/: mouse.txt
configs/: egfp_example.config  egfp_example2.config  epo_example.config  ffluc_example.config  ffluc_example2.config  lacz_example.config  minigfp_example1.config  minigfp_example2.config  minigfp_example3.config  minigfp_example4.config
cpp_src/: .clang-format  CMakeLists.txt
cpp_src/exe/: CMakeLists.txt
cpp_src/exe/src/: fold_codon_graph.cpp
cpp_src/mwmrna_lib/src/: CMakeLists.txt  codon_fold.hpp  codon_graph.hpp  codon_graph_fold.hpp  codon_graph_trace.hpp  codon_scorer.hpp  codon_table_strings.hpp  codon_trace.hpp  energy_calculator.hpp  energy_model.hpp  energy_semiring.hpp  fold.hpp  logging.cpp  logging.hpp  md_array.hpp  parallel.hpp  protein.cpp  protein.hpp  rna.cpp  rna.hpp  structure.cpp  structure.hpp  vienna_param_strings.hpp  vienna_params.hpp
pysrc/: fold_codons.py
